# tele-leech-bot

./: .gitignore  pyproject.toml  supervisor.conf  uvrun.sh
bot/: __init__.py
